Fixed footer bug on tablet and mobile views.

--- a/css/style.css
+++ b/css/style.css
@@ -432,6 +432,18 @@ h6, .h6 {
   }
 }
 
+@media screen and (max-width: 600px) {
+  #footer {
+    margin-bottom: 75px;
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 992px) {
+  #footer {
+    margin-bottom: 450px;
+  }
+}
+
 .display-2 {
   font-size: 5.5rem;
   font-weight: 300;
